chore: add project base, genre controller and routes

--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
     "start": "node dist/common/server/server.js",
     "build": "rimraf dist && tsc -p tsconfig-build.json",
     "debug": "nodemon -L --watch ./dist --inspect=0.0.0.0:9222 --nolazy ./dist/common/server/server.js",
-    "up": "npm run build && docker-compose up",
+    "up": "yarn run build && docker-compose up",
     "down": "docker-compose down",
-    "dev": "ts-node-dev --respawn --transpile-only src/common/server/server.js",
-    "startd": "npm run build && npm debug",
+    "dev": "ts-node-dev --respawn --transpile-only src/common/server/server.js",    
+    "startd": "yarn run build && yarn debug",
     "test": "jest --passWithNoTests --silent --no-cache --runInBand",
     "test:verb": "jest --passWithNoTests --verbose --runInBand",
-    "test:unit": "npm test -- --watchAll -c jest-unit-config.js",
-    "test:int": "npm test -- --watchAll -c jest-integration-config.js",
-    "test:staged": "npm test -- --findRelatedTests",
-    "test:ci": "npm test -- --coverage",
-    "test:coveralls": "npm run test:ci && coveralls < coverage/lcov.info",
+    "test:unit": "yarn test -- --watchAll -c jest-unit-config.js",
+    "test:int": "yarn test -- --watchAll -c jest-integration-config.js",
+    "test:staged": "yarn test -- --findRelatedTests",
+    "test:ci": "yarn test -- --coverage",
+    "test:coveralls": "yarn run test:ci && coveralls < coverage/lcov.info",
     "clear_jest": "jest --clearCache"
   },
   "devDependencies": {
