feat: should Return **Forbidden** if there is already an genre with the given name

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "node": "14.x"
   },
   "_moduleAliases": {
-    "@": "dist"
+    "@": "dist",
+    "@genres": "dist/core/components/genres"
   }
 }
