--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "paths": {
       "@/*": [
         "*"
-      ]
+      ],
+      "@genres/*": ["core/components/genres/*"]   
     }
   },
   "include": [
