--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "git-commit-msg-linter": "^3.2.6",
     "husky": "^7.0.1",
     "jest": "^27.0.6",
+    "joi-to-json": "^2.0.0",
     "lint-staged": "^11.0.1",
     "mockdate": "^3.0.5",
     "rimraf": "^3.0.2",
