--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@shelf/jest-mongodb": "^2.0.1",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
+    "@types/lodash": "^4.14.173",
     "@types/mongodb": "^3.6.20",
     "@types/node": "^16.3.2",
     "@types/supertest": "^2.0.11",
@@ -56,6 +57,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "joi": "^17.4.2",
+    "lodash": "^4.17.21",
     "module-alias": "^2.2.2",
     "mongodb": "^3.6.10",
     "nodemon": "^2.0.12"
